--- a/ServletMappingTest/WebContent/WEB-INF/web.xml
+++ b/ServletMappingTest/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
- <?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>servletTest</display-name>
+  <display-name>ServletMappingTest</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,4 +9,13 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-</web-app>
+  
+  <servlet>
+  <servlet-name>servletEx</servlet-name>
+  <servlet-class>com.servlet.servletEx</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>servletEx</servlet-name>
+  <url-pattern>/SE</url-pattern>
+  </servlet-mapping>
+</web-app>     
